--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -19,7 +19,7 @@ mysql:
   host: "127.0.0.1"
   port: "3306"
   user: "root"
-  password: "199732skfly"
+  password: "*******"
   dbname: "bluebell"
   max_open_conns: 200
   max_idle_conns: 50
